# ScriptCore-Python-Lib

./: LICENSE  README.md
ScriptCore/: README.md  pyproject.toml  template.md
ScriptCore/scriptcore/: core.py  viewer.py
ScriptCore/scriptcore.egg-info/: PKG-INFO  top_level.txt
ScriptCore/templates/: hello.py  src_template.py
scriptcore/: __init__.py  cli.py  viewer.py
scriptcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
templates/: hello.py
