[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptcore"
version = "0.1.0"
description = "Embed subfiles (HTML, CSS, JS) inside Python scripts and display them in a native window"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ScriptCore Contributors", email = "dev@example.com"}
]
keywords = ["embed", "subfiles", "html", "python", "pyside6", "viewer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = ["PySide6"]

[project.urls]
Homepage = "https://github.com/yourusername/scriptcore"
Documentation = "https://github.com/yourusername/scriptcore#readme"
Repository = "https://github.com/yourusername/scriptcore.git"
Issues = "https://github.com/yourusername/scriptcore/issues"

[project.scripts]
scriptcore = "scriptcore.cli:main"